--- a/package.json
+++ b/package.json
@@ -1,62 +1,38 @@
 {
-  "name": "frontend-streaming",
-  "main": "expo-router/entry",
+  "name": "sora",
   "version": "1.0.0",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
-    "@reduxjs/toolkit": "^2.5.1",
-    "axios": "^1.7.9",
-    "expo": "~52.0.28",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.5",
-    "expo-font": "~13.0.3",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.1",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "expo": "~50.0.14",
+    "expo-av": "~13.10.5",
+    "expo-constants": "~15.4.5",
+    "expo-device": "^5.9.3",
+    "expo-document-picker": "~11.10.1",
+    "expo-font": "~11.10.3",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.8",
+    "expo-status-bar": "~1.11.1",
+    "install": "^0.13.0",
+    "nativewind": "^2.0.11",
+    "react": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-animatable": "^1.4.0",
+    "react-native-appwrite": "^0.2.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
-    "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "@babel/core": "^7.24.3",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
